2012-04-03  Ryosuke Niwa  <rniwa@webkit.org>

        Another build fix after r113067 for Mac port.
        It turned out that archiving the entire build directory doesn't work.

        * BuildSlaveSupport/built-product-archive:
        (createZipManually):
        (createZip):
        (archiveBuiltProduct):

2012-04-03  Mike Lattanzio  <mlattanzio@rim.com>

        [BlackBerry] Expose CaseSensitive, Wrap, and HighlightAllMatches in WebPage::findNextString()
        https://bugs.webkit.org/show_bug.cgi?id=82643

        Update LayoutTestController to accomodate the new find API.
        It now provides caseSensitive functionality to DRT.

        Internal Review by Andy Chen.

        Reviewed by Rob Buis.

        * DumpRenderTree/blackberry/LayoutTestControllerBlackBerry.cpp:
        (LayoutTestController::findString):

2012-04-03  Ryosuke Niwa  <rniwa@webkit.org>

        Another build fix after r113067. CreateWebKitBuildDirectory step is no longer needed
        because download-built-product creates the build directory as needed.

        This step fails on Chromium Windows due to -p option not supported by Windows' native mkdir.

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (TestFactory.__init__):

2012-04-03  Ryosuke Niwa  <rniwa@webkit.org>

        Build fix after r113067. Don't delete the build directory.

        * BuildSlaveSupport/built-product-archive:
        (extractBuiltProduct):

2012-04-02  Ojan Vafai  <ojan@chromium.org>

        Load all builder lists from the buildbot json
        https://bugs.webkit.org/show_bug.cgi?id=82998

        Reviewed by Adam Barth.

        Also, remove an unnecessary list of test types. Now we don't hard-code
        builder names anywhere and we only have a single hard-coded list of
        test types.

        * TestResultServer/static-dashboards/builders.js:
        (BuilderMaster.prototype.logPath):
        (BuilderMaster.prototype.builderJsonPath):